fix uneven spacing top and bottom of project content

--- a/themes/gfsc/assets/sass/pages/_project.sass
+++ b/themes/gfsc/assets/sass/pages/_project.sass
@@ -7,7 +7,7 @@
   +for-desktop-up
     margin: 0 $margin-desktop
     +border(sides)
-    padding-bottom: 0
+    // padding-bottom: 0
   &__title
     margin-block-start: 0
     margin-block-end: 0
